examples/type_system/failing/168_tuple_destructure_unresolved_guard_strict_e425.flx
fn main() -> Unit {
    let (a, b) = mystery_value
    let _after = 1
}
